k8s/flux/clusters/tal-clu-1/infra/security/kubeclarity/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: kubeclarity
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`kubeclarity.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: kubeclarity
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`kubeclarity.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: kubeclarity-kubeclarity
      port: 8080
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
